# e-reg_controller

./: config.ini  environment.yml  pyproject.toml
src/: main.py
src/configuration/: config.ini
src/controller/: bleed_worker.py  controller.py  polling_worker.py  sweep_worker.py  worker.py
src/data_cache/: history.json
src/helpers/: helpers.py
src/model/: ereg_driver.py  model.py
src/view/: bleed_supply_window.py  main_window.py  plot_window.py  plotter.py  pressure_sweep_window.py  reconnect_window.py  scalable_image_label.py  scrolling_line_edit.py
